# otus

./: CMakeLists.txt  README.md  otus.hpp
doc/: readme.md
examples/: main.cpp  sfml.cpp
src/: component.hpp  entity.hpp  eventmanager.hpp  events.hpp  helpers.hpp  otus.hpp  tmp.hpp  traits.hpp
